# carl

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: reviewer.md
.claude/commands/: explain.md
.claude/hooks/: pre-commit.sh
.cursor/: rules
.cursor/skills/testing-policy/: SKILL.md
.github/workflows/: ci.yml
.github/workflows.proposed/: README.md  ci.yml
carl/: __init__.py  __main__.py  auto.py  cli.py  loop.py  report.py  settings.py
carl/adapters/: __init__.py  _registry.py  base.py  claude_code.py  cursor.py
carl/core/: __init__.py  llm_client.py
carl/core/bandit/: __init__.py  thompson.py
carl/core/buffer/: __init__.py  storage.py
carl/core/diagnosis/: __init__.py  attributor.py  types.py
carl/core/dpo_ranker/: __init__.py  ranker.py
carl/core/grpo_scorer/: __init__.py  advantage.py
carl/core/mutation/: __init__.py  proposer.py
carl/core/policy/: __init__.py  apply_diff.py  artifacts.py
carl/core/promotion/: __init__.py  gate.py
carl/env/: __init__.py  docker_sandbox.py  local_sandbox.py
carl/tasks/: __init__.py  discovery.py
dashboard/: app.py
docker/: Dockerfile.episode.claude
docs/: architecture.md  measurement.md  multi_ide.md  promotion_gate.md  reproducing_results.md  reward_design.md  reward_hacking.md  rl_stack.md
experiments/: __init__.py  ab_compare.py  eval_diagnosis.py  run_baseline.py  run_carl.py  run_synthetic_demo.py
js/cursor-bridge/: README.md  package-lock.json  package.json  tsconfig.json
paper/: bibliography.bib  demo_script.md  draft.md  milestone_may17.md
scripts/: quickstart.sh  run_all.sh
tasks/: diagnosis_labels.yaml
tasks/probes/: reward_hacking.yaml
tests/integration/: test_auto_dry_run.py  test_cli_commands_work.py  test_local_runner_end_to_end.py  test_loop_step_with_fake_llm.py  test_measurement_pipeline_end_to_end.py  test_python_dash_m_invocation.py
tests/unit/: test_apply_diff.py  test_buffer_storage.py  test_claude_code_adapter_round_trip.py  test_composite_reward.py  test_cursor_adapter_round_trip.py  test_diagnosis_validates_structured_output.py  test_dpo_ranker.py  test_grpo_advantages.py  test_hack_probe_detects_exploits.py  test_judge_bias_controls.py  test_mutation_proposer_locality.py  test_policy_diff_locality.py  test_promotion_gate.py  test_synthetic_demo_runs_pipeline.py  test_task_discovery_padding.py  test_thompson_bandit.py  test_verifier_parses_ci_artifacts.py
(+7 files in other folders)
