[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carl-loop"
version = "0.1.0"
description = "Cross-IDE RL framework for coding agent configuration — RLVR + GRPO + DPO + bandits over text-space policy artifacts"
readme = "README.md"
authors = [{ name = "Anni Zimina", email = "zimina@stanford.edu" }]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "reinforcement-learning",
    "coding-agents",
    "claude-code",
    "cursor",
    "rlvr",
    "grpo",
    "dpo",
    "contextual-bandits",
    "agent-configuration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "litellm>=1.50",
    "pydantic>=2.7",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "docker>=7.1",
    "scipy>=1.13",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "streamlit>=1.38",
    "click>=8.1",
    "rich>=13.7",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "tenacity>=8.5",
    "gitpython>=3.1",
    "watchfiles>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "shellcheck-py>=0.10",
]
cursor = []

[project.scripts]
carl = "carl.cli:main"

[project.entry-points."carl.adapters"]
claude_code = "carl.adapters.claude_code:ClaudeCodeAdapter"
cursor = "carl.adapters.cursor:CursorAdapter"

[project.urls]
Homepage = "https://github.com/anni-stanford/carl"
Repository = "https://github.com/anni-stanford/carl"
Issues = "https://github.com/anni-stanford/carl/issues"

[tool.hatch.build.targets.wheel]
packages = ["carl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
